[package]
name = "rosu-pp"
version = "0.9.4"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }
akatsuki-pp = { git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "a8b4eaffb2274d2e86ff042b7327286e13b6488d" }