[package]
name = "akatsuki-pp-js"
version = "0.9.8"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-experimental"] }
akatsuki-pp = { git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "5c97207f25cf9fd07252dca1ba68d785e2147ce1" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true