[package]
name = "akatsuki-pp-js"
version = "0.10.0"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn", "shockpast"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-experimental"] }
akatsuki-pp = { git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "b439e81dc0524d63c29fb5a2a202e4f8e00c2b3e" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true